# project-snake016

./: .gitignore  README.md  addressbook.pkl  notebook.pkl  pyproject.toml  requirements.txt
doc/: Manual_QA_Testing_Checklist.txt  PO_requirements.txt
src/: address_book.py  command_registry.py  command_suggester.py  commands.py  data_persistence.py  main.py  note_book.py  ui_formatter.py
