[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "address-book-assistant"
version = "1.0.0"
description = "Address Book and Note Management Assistant Bot"
requires-python = ">=3.8"
dependencies = [
    "prompt-toolkit>=3.0.36",
    "colorama>=0.4.6", 
    "prettytable>=3.6.0"
]

[project.scripts]
address-book = "main:main"
